--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,13 @@ body {
 .like-button {
   cursor: pointer;
 }
+
+.comment-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.comment-container > p {
+  margin-top: 0;
+}
