--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,10 @@ body {
   align-items: center;
 }
 
+.comment-container:hover {
+  background-color: rgb(235, 235, 235);
+}
+
 .comment-container > p {
   margin-top: 0;
 }
