--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,37 @@ body {
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
 }
 
+.post-header {
+  width: 100%;
+  height: 55px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.post-header > * {
+  padding: 0 1em;
+}
+
+.location-p {
+  color: rgb(45, 45, 45);
+  font-size: .9em;
+  margin-left: .6em;
+}
+
+.post-location-container {
+  height: 55px;
+  display: flex;
+  align-items: center;
+}
+
+.clickable-svg {
+  cursor: pointer;
+}
+
 .post-image {
   width: 500px;
   height: 500px;
-  border-top-left-radius: 1em;
-  border-top-right-radius: 1em;
   overflow: hidden;
   object-fit: cover;
 }
@@ -48,6 +74,11 @@ body {
 
 .comments-title {
   margin-bottom: .5em;
+  cursor: pointer;
+}
+
+.comments-title:hover {
+  color: rgb(40, 40, 40);
 }
 
 .comment-container {
@@ -70,9 +101,9 @@ body {
   color: white;
   font-weight: 500;
   font-size: 1em;
-  width: 25px;
-  height: 25px;;
-  padding: .1em .5em .2em .5em;
+  width: 22px;
+  height: 22px;
+  padding: .01em 0 .12em 0;
   border-style: none;
   border-radius: 200px;
   cursor: pointer;
