--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,10 @@ body {
   cursor: pointer;
 }
 
+.post-name {
+  margin: .85em 0 .5em 0;
+}
+
 .comments-title {
   margin-bottom: .5em;
   cursor: pointer;
@@ -114,16 +118,42 @@ body {
 }
 
 .add-comment-form {
-  margin-top: .75em;
+  height: 35px;
+  margin-top: .5em;
   margin-bottom: .5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .add-comment-form > input {
-  width: 76%;
+  width: 85%;
+  height: 25px;
+  padding: .2em .75em;
+  border: 1px solid rgb(180, 180, 180);
+  border-top-left-radius: .35em;
+  border-bottom-left-radius: .35em;
 }
 
-.submit-button {
-  width: 22% !important;
+.add-comment-form > input:focus {
+  outline: none;
+}
+
+.submit-comment-button {
+  background-color: rgb(102, 160, 241);
+  width: 32px;
+  height: 32px;
+  border-style: none;
+  border-top-right-radius: .35em;
+  border-bottom-right-radius: .35em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.submit-comment-button:hover {
+  background-color: rgb(75, 139, 230);
 }
 
 .divider-line {
