--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ body {
 
 .add-comment-form {
   height: 35px;
-  margin-top: .5em;
+  margin-top: .35em;
   margin-bottom: .5em;
   display: flex;
   justify-content: center;
@@ -127,10 +127,11 @@ body {
 }
 
 .add-comment-form > input {
-  width: 85%;
+  width: 87%;
   height: 25px;
   padding: .2em .75em;
-  border: 1px solid rgb(180, 180, 180);
+  border: 1px solid rgb(192, 192, 192);
+  border-right-style: none;
   border-top-left-radius: .35em;
   border-bottom-left-radius: .35em;
 }
