--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body {
 }
 
 .post-info-container {
-  padding: 1em 1.5em 0 1.5em;
+  padding: .78em 1.5em 0 1.5em;
 }
 
 .likes-container {
@@ -73,11 +73,24 @@ body {
 }
 
 .post-name {
-  margin: .85em 0 .5em 0;
+  margin: .6em 0 .5em 0;
+}
+
+.ingredients-title {
+  margin-top: .95em;
+  margin-bottom: .5em;
+  margin-left: .35em;
+}
+
+.ingredients-list {
+  margin: .75em;
 }
 
 .comments-title {
+  margin-top: .8em;
   margin-bottom: .5em;
+  margin-left: .35em;
+  user-select: none;
   cursor: pointer;
 }
 
@@ -86,7 +99,7 @@ body {
 }
 
 .comment-container {
-  padding: 0 .5em;
+  padding: 0 .75em;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -161,7 +174,7 @@ body {
   background-color: rgb(220, 220, 220);
   width: 100%;
   height: 1px;
-  margin-top: 1em;
+  margin-top: 1.3em;
 }
 
 .tags-container {
