--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/****************/
+/* Font Imports */
+/****************/
+
 /*****************/
 /* Standard Tags */
 /*****************/
@@ -15,7 +19,7 @@ body {
   width: 500px;
   border-radius: 1em;
   margin: 1em auto 2em auto;
-  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.1);
 }
 
 .post-header {
@@ -79,17 +83,15 @@ body {
 .ingredients-title {
   margin-top: .95em;
   margin-bottom: .5em;
-  margin-left: .35em;
 }
 
 .ingredients-list {
-  margin: .75em;
+  margin: .75em .5em;
 }
 
 .comments-title {
   margin-top: .8em;
   margin-bottom: .5em;
-  margin-left: .35em;
   user-select: none;
   cursor: pointer;
 }
@@ -99,7 +101,7 @@ body {
 }
 
 .comment-container {
-  padding: 0 .75em;
+  padding: 0 .5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
