--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
   position: fixed;
   display: flex;
   align-items: center;
-  box-shadow: 0 0 1em rgb(221, 221, 221);
+  box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
+  z-index: 3;
 }
 h2{
   margin: 0;
@@ -98,6 +99,94 @@ h2{
   background-color: rgb(160, 0, 0) !important;
 }
 
+/*******/
+/* Add */
+/*******/
+
+.add-button {
+  margin-right: .75em;
+  cursor: pointer;
+}
+
+.overlay {
+  background-color: rgba(121, 121, 121, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  z-index: 4;
+}
+
+.add-form-container {
+  box-sizing: border-box;
+  background-color: rgba(255, 255, 255);
+  text-align: left;
+  width: 525px;
+  padding: 1.35em 1.6em 1.5em 1.6em;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+  z-index: 6;
+}
+
+.add-form-header {
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.close-add-button {
+  background-color: rgb(180, 180, 180);
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  border-style: none;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.close-add-button:hover {
+  background-color: rgb(160, 160, 160);
+}
+
+.add-form {
+  margin-top: .85em;
+  padding: 0 .5em;
+}
+
+.add-form > * {
+  margin: .6em 0;
+}
+
+.add-input {
+  width: 97%;
+  height: 22px;
+  padding: .1em 0 .1em .5em;
+  margin-bottom: 1em;
+}
+
+.add-submit-button {
+  font-size: .9em;
+  text-transform: uppercase;
+  background-color: rgb(199, 89, 205);
+  color: white;
+  padding: .5em .75em;
+  border-style: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.add-submit-button:hover {
+  background-color: rgb(189, 81, 195);
+}
+
 /*****************/
 /* Standard Tags */
 /*****************/
@@ -111,7 +200,7 @@ body {
 /*******************/
 
 .posts-container{
-  margin-top: 50px;
+  margin-top: 80px;
 }
 
 .post-container {
@@ -222,14 +311,22 @@ body {
   font-size: 1em;
   width: 22px;
   height: 22px;
-  padding: .01em 0 .12em 0;
+  padding: 0;
   border-style: none;
-  border-radius: 200px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
 }
 
 .delete-comment-button:hover {
   background-color: rgb(160, 160, 160);
+}
+
+.delete-comment-button > * {
+  width: 20px;
+  height: 20px;;
 }
 
 .add-comment-form {
@@ -256,7 +353,7 @@ body {
 }
 
 .submit-comment-button {
-  background-color: rgb(102, 160, 241);
+  background-color: rgb(199, 89, 205);
   width: 32px;
   height: 32px;
   border-style: none;
@@ -269,7 +366,7 @@ body {
 }
 
 .submit-comment-button:hover {
-  background-color: rgb(75, 139, 230);
+  background-color: rgb(189, 81, 195);
 }
 
 .divider-line {
