--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,7 @@ h2{
 
 body {
   background-color: rgb(245, 245, 245);
+  margin: 0;
 }
 
 /*******************/
@@ -326,7 +327,7 @@ body {
 
 .delete-comment-button > * {
   width: 20px;
-  height: 20px;;
+  height: 20px;
 }
 
 .add-comment-form {
@@ -386,4 +387,32 @@ body {
   color: rgb(95, 95, 95);
   font-size: .95em;
   margin: .55em 0;
+}
+
+/**********/
+/* Footer */
+/**********/
+
+footer {
+  background-color: white;
+  width: 100%;
+  height: 55px;
+  margin: 2.7em 0 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 .7em rgba(0, 0, 0, 0.1);
+}
+
+footer > img {
+  height: 50px;
+  transform: translate(0px, -1px);
+}
+
+footer > h5:first-of-type {
+  transform: translate(12px, 0px);
+}
+
+footer > h5 {
+  transform: translate(-10px, 0px);
 }
