--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,29 @@ h2{
 .show {
   display: block;
 }
+.edit-overlay {
+  background-color: rgba(121, 121, 121, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  z-index: 4;
+  
+}
+.edit-form-container {
+  box-sizing: border-box;
+  background-color: rgba(255, 255, 255);
+  text-align: left;
+  width: 525px;
+  padding: 1.35em 1.6em 1.5em 1.6em;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+  z-index: 6;
+}
 /*****************/
 /*     Delete    */
 /*****************/
