posts display in reverse order after making new one

--- a/src/App.css
+++ b/src/App.css
@@ -253,6 +253,11 @@ body {
   margin-left: .6em;
 }
 
+.location-p > a {
+  color: rgb(144, 52, 149);
+  text-decoration: none;
+}
+
 .post-location-container {
   height: 55px;
   display: flex;
